# Autonomous-Cognitive-Engine-for-Deep-Research-and-Long-Horizon

./: .gitignore  README.md  app.py  base_agent.py  daily tasks.docx  planner.py  planning_agent.py  planning_tools.py  state.py  ~$ily tasks.docx
autonomous-cognitive-engine/: test.ipynb
autonomous-cognitive-engine/deep_cognitive_agent/: main.py  state.py
autonomous-cognitive-engine/deep_cognitive_agent/tools/: planning.py
cognitive-engine-for-deep-research/: create_structure.bat
cognitive-engine-for-deep-research/deep_cognitive_agent/: .env  pyproject.toml  test.bat  test_env.py  test_tracing.py
project/deep_cognitive_agent/: .env  .env.example  app.py  requirements.txt
project/deep_cognitive_agent/graphs/: __init__.py  state.py
project/deep_cognitive_agent/outputs/: .gitkeep.json
project/deep_cognitive_agent/tests/: __init__.py  test_planning.py
project/deep_cognitive_agent/tools/: __init__.py
project/deep_cognitive_agent/tools/planning/: __init__.py  write_todos.py
