[project]
name = "deep-cognitive-agent"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.8",
    "langgraph>=1.0.8",
    "langsmith>=0.7.1",
    "openai>=2.18.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
